<resources>
    <string name="app_name">ProjectPMDM</string>
    <string name="pref_notifications_title">I want to receive notifications</string>
    <string name="pref_notifications_body">Check if you want to receive notifications.</string>
    <string name="login_title">Wellcome</string>
    <string name="login_btn">Login</string>
    <string name="login_username">Your username</string>
    <string name="login_pwd">Your password</string>
    <string name="register_btn">Register</string>
    <string name="register_title">New user</string>
    <string name="toast_login_empty">¡You must write both the username and the password!</string>
    <string name="toast_username_used">This username is already in use</string>
    <string name="toast_register_error">There are an unknown error inserting the user</string>
    <string name="toast_wrong_pwd">The password is incorrect</string>
    <string name="home_title">¡Welcome, %1$s!</string>
    <string name="home_products">See products</string>
    <string name="home_users">See users</string>
    <string name="home_menu_me">My data</string>
    <string name="home_menu_prefs">Preferences</string>
    <string name="pref_notifications">I want to receive notifications</string>
    <string name="pref_notifications_desc">Check this option if you want to receive our notifications.</string>
    <string name="data_address">Your address</string>
    <string name="data_website">Your website</string>
    <string name="data_tlf">Your telephone number</string>
    <string name="data_title">Here is your data, %1$s</string>
    <string name="list_menu_edit">Edit</string>
    <string name="home_menu_logout">Logout</string>
    <string name="users_title">Users list</string>
    <string name="users_remove_user">Remove</string>
    <string name="users_remove_dialog_title">Confirmation</string>
    <string name="users_remove_dialog_body">You need to introduce the admin password</string>
    <string name="confirmation_yes">Confirm</string>
    <string name="confirmation_no">Cancel</string>
    <string name="toast_admin_pwd_incorrect">The admin password is incorrect</string>
    <string name="login_user_invalid">The username or password is incorrect</string>
    <string name="products_list_insert">Insert product</string>
    <string name="products_insert_title">Insert new product</string>
    <string name="products_name">Name</string>
    <string name="products_description">Description</string>
    <string name="products_price">Price</string>
    <string name="products_qty">Quantity</string>
    <string name="products_add_btn">Add</string>
    <string name="products_complete_all">You must set all the fields</string>
    <string name="notification_text">You have bought a product.</string>
    <string name="notification_title">Notification</string>
    <string name="channel_name">Project Channel</string>
    <string name="channel_description">The channel description</string>
</resources>