<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_background"
    tools:context=".activities.InsertProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/front_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtHomeTitle2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/products_insert_title"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtInsProductName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/products_name"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="@dimen/body_size" />

        <EditText
            android:id="@+id/txtInsProductDesc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/products_description"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="@dimen/body_size" />

        <EditText
            android:id="@+id/txtInsProductPrice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/products_price"
            android:inputType="numberDecimal"
            android:textAlignment="center"
            android:textSize="@dimen/body_size" />

        <EditText
            android:id="@+id/txtInsProductQty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/products_qty"
            android:inputType="number"
            android:textAlignment="center"
            android:textSize="@dimen/body_size" />

        <Button
            android:id="@+id/button5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onAdd"
            android:text="@string/products_add_btn"
            android:textSize="@dimen/body_size" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>