<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deep_background"
    tools:context=".activities.MyDataActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:background="@color/front_background"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtMyDataTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="User"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/txtDataAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/data_address"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="@dimen/body_size" />

        <EditText
            android:id="@+id/txtDataWebsite"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/data_website"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="@dimen/body_size" />

        <EditText
            android:id="@+id/txtDataTlf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="true"
            android:ems="10"
            android:enabled="false"
            android:hint="@string/data_tlf"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textSize="@dimen/body_size" />

        <Button
            android:id="@+id/btnMyDataEdit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="onEdit"
            android:text="@string/list_menu_edit"
            android:textSize="@dimen/body_size"
            android:visibility="gone" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>